# TestProjectThirdParty

./: .gitmodules  run.sh
test_thirdparty/: CMakeLists.txt
test_thirdparty/src/: include_third.cpp  include_third.h
